pkg/safeguards/lib/v1.0.0/container-allowed-images/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureV2ContainerAllowedImages
metadata:
  name: v2-container-allowed-images
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    imageRegex: "nginx:latest"
    excludedContainers: []
